[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1", features = ["derive", "rc"] }
lazy_static = "1"
miniserde = "0.1"
uuid = { version = "1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = "0.2"
log = "0.4"


leptos = { version = "0.2", default-features = false, features = ["ssr"] }
sycamore = { version = "0.8", features = ["ssr"] }
tera = "1"



[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"HtmlInputElement",
	"Storage",
]
